--- a/index.html
+++ b/index.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>The Great Gatsby</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Erik Satie</title>
+	<link rel="icon" href="images/Erik_Satie.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h1>The Great Gatsby</h1>
-<p>by</p>
-<h3>Scott Fitzgerald</h3>
-<h2>Chapter1</h2>
-<p> I n my younger and more vulnerable years my father gave 
-me some advice that I’ve been turning over in my mind 
-ever since.</p>
 
-‘Whenever you feel like criticizing any one,’ he told me, 
-‘just remember that all the people in this world haven’t had 
-the advantages that you’ve had.’ <br>
+	<!-- Header section -->
+	<header>
+		<img src="images/Erik_Satie.png">
+		<h1>Erik Satie</h1>
+	</header>
 
-</p>He didn’t say any more but we’ve always been unusually 
-communicative in a reserved way, and I understood that he 
-meant a great deal more than that. In consequence I’m in¬ 
-clined to reserve all judgments, a habit that has opened up 
-many curious natures to me and also made me the victim 
-of not a few veteran bores. The abnormal mind is quick to 
-detect and attach itself to this quality when it appears in a 
-normal person, and so it came about that in college I was 
-unjustly accused of being a politician, because I was privy 
-to the secret griefs of wild, unknown men.</p>
+	<!-- Main section -->
+	<main>
+		<h2>About Erik Satie</h2>
+		<p>Erik Satie was a French composer and pianist.</p>
+		<img src="images/Erik_Satie_Splash.jpg">
+		<p class="caption">Painting of Erik Satie playing the pump organ.</p>
 
-</p>Most of the confidences were unsought—frequently I have feigned sleep, preoccupation, or a hostile levity when I realized by some 
-unmistakable sign that an intimate revelation was quiver¬ 
-ing on the horizon—for the intimate revelations of young 
-men or at least the terms in which they express them are 
-usually plagiaristic and marred by obvious suppressions. 
-Reserving judgments is a matter of infinite hope. </p>
+		<!-- Facts -->
+		<h2>Facts About Erik Satie</h2>
+		<ul>
+			<li>Erik Satie was a classy guy, wearing only gray suits and sometimes wearing a top hat.</li>
+			<li>Erik Satie walked ten miles everyday.</li>
+			<li>Erik Satie was friends and admired by Maurice Ravel and Claude Debussy.</li>
+			<li>Erik Satie owned two pianos which he had stacked on top of each other. (Strange right?)</li>
+		</ul>
 
+		<!-- Compositions -->
+		<h2>Erik's Satie Compositions</h2>
+		<p>Erik Satie composed hundreds of pieces spanning many genres, here are a few of his most popular.</p>
+		<ol>
+			<li><a href="https://youtu.be/kYU-rE1eM-w" target="_blank">Gnossienne No.1</a></li>
+			<li><a href="https://youtu.be/Yl7fK23F5QU" target="_blank">Gymnopedie No.1</a></li>
+			<li><a href="https://youtu.be/yxY5NCPxs8A" target="_blank">Gnossienne No.3</a></li>		
+		</ol></a>
+	</main>
+
+	<!-- Footer section -->
+	<footer>
+		<p>Demo site for the Web Development exercise for the <a href="https://courses.warwick.ac.uk/modules/2021/WM9A4-15" target="_blank">Digital Development with Python</a> module.</p>
+	</footer>
 </body>
 </html>
