--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<!-- Header section -->
 	<header>
-		<img src="images/Erik_Satie.png">
+		<img src="Images/Bull_ring.jpg">
 		<h1>Erik Satie</h1>
 	</header>
 
