--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Erik Satie</title>
-	<link rel="icon" href="images/Erik_Satie.png">
+	<link rel="icon" href="Images/Bull_ring.jpg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
 	<main>
 		<h2>About Erik Satie</h2>
 		<p>Erik Satie was a French composer and pianist.</p>
-		<img src="images/Erik_Satie_Splash.jpg">
+		<img src="Images/Bull_ring.jpg">
 		<p class="caption">Painting of Erik Satie playing the pump organ.</p>
 
 		<!-- Facts -->
