--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Erik Satie</title>
+	<title>DDP_IMA_Yogi</title>
 	<link rel="icon" href="Images/Bull_ring.jpg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,23 +15,23 @@
 	<!-- Header section -->
 	<header>
 		<img src="Images/Bull_ring.jpg">
-		<h1>Erik Satie</h1>
+		<h1>Yogi Rianto</h1>
 	</header>
 
 	<!-- Main section -->
 	<main>
-		<h2>About Erik Satie</h2>
-		<p>Erik Satie was a French composer and pianist.</p>
+		<h2>About Yogi Rianto</h2>
+		<p>Yogi is axxxx.</p>
 		<img src="Images/Bull_ring.jpg">
-		<p class="caption">Painting of Erik Satie playing the pump organ.</p>
+		<p class="caption">xxxxxxxxxxx.</p>
 
 		<!-- Facts -->
-		<h2>Facts About Erik Satie</h2>
+		<h2>Facts About Yogi</h2>
 		<ul>
-			<li>Erik Satie was a classy guy, wearing only gray suits and sometimes wearing a top hat.</li>
-			<li>Erik Satie walked ten miles everyday.</li>
-			<li>Erik Satie was friends and admired by Maurice Ravel and Claude Debussy.</li>
-			<li>Erik Satie owned two pianos which he had stacked on top of each other. (Strange right?)</li>
+			<li>xxxxxx</li>
+			<li>xxxxxx.</li>
+			<li>xxxxxx.</li>
+			<li>xxxxxx</li>
 		</ul>
 
 		<!-- Compositions -->
@@ -46,7 +46,7 @@
 
 	<!-- Footer section -->
 	<footer>
-		<p>Demo site for the Web Development exercise for the <a href="https://courses.warwick.ac.uk/modules/2021/WM9A4-15" target="_blank">Digital Development with Python</a> module.</p>
+		<p>Demo site for the Web Development exercise for the <a href="https://courses.warwick.ac.uk/modules/2021/WM9A4-15" target="_blank">Digital Development with Python</a> IMA.</p>
 	</footer>
 </body>
 </html>
