--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<img src="Images/Bull_ring.jpg">
 		<p class="caption">xxxxxxxxxxx.</p>
 
-		<!-- Facts -->
-		<h2>Facts About Yogi</h2>
+		<!-- Hobbies -->
+		<h2>Hobbies</h2>
 		<ul>
 			<li>xxxxxx</li>
 			<li>xxxxxx.</li>
@@ -34,19 +34,24 @@
 			<li>xxxxxx</li>
 		</ul>
 
-		<!-- Compositions -->
-		<h2>Erik's Satie Compositions</h2>
-		<p>Erik Satie composed hundreds of pieces spanning many genres, here are a few of his most popular.</p>
+		<!-- Likes -->
+		<h2>Likes</h2>
+		<p>Yogi likes asjajsjaj.</p>
 		<ol>
 			<li><a href="https://youtu.be/kYU-rE1eM-w" target="_blank">Gnossienne No.1</a></li>
 			<li><a href="https://youtu.be/Yl7fK23F5QU" target="_blank">Gymnopedie No.1</a></li>
 			<li><a href="https://youtu.be/yxY5NCPxs8A" target="_blank">Gnossienne No.3</a></li>		
 		</ol></a>
+		<!-- Friends -->
+		<h2>Friends</h2>
+		<p>Yogi friends.</p>
+
 	</main>
 
 	<!-- Footer section -->
 	<footer>
 		<p>Demo site for the Web Development exercise for the <a href="https://courses.warwick.ac.uk/modules/2021/WM9A4-15" target="_blank">Digital Development with Python</a> IMA.</p>
+		<p>Template by Jordan_Bruno<p>
 	</footer>
 </body>
 </html>
