--- a/index.html
+++ b/index.html
@@ -3,55 +3,48 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>DDP_IMA_Yogi</title>
-	<link rel="icon" href="Images/Bull_ring.jpg">
+	<title>DDP IMA Yogi Rianto</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 	<!-- Header section -->
 	<header>
-		<img src="Images/Bull_ring.jpg">
-		<h1>Yogi Rianto</h1>
+		<img src="header_photo.jpg"<br>
+			<h1>Yogi Rianto</h1>
 	</header>
 
 	<!-- Main section -->
 	<main>
 		<h2>About Yogi Rianto</h2>
-		<p>Yogi is axxxx.</p>
-		<img src="Images/Bull_ring.jpg">
-		<p class="caption">xxxxxxxxxxx.</p>
+		<p>Yogi is a postgraduate student in WMG.</p>
+		<img src="3.png">
+		<p class="caption">Yogi & friend is in the Digital Entrepreneurship & Financing Module.</p>
 
 		<!-- Hobbies -->
 		<h2>Hobbies</h2>
 		<ul>
-			<li>xxxxxx</li>
-			<li>xxxxxx.</li>
-			<li>xxxxxx.</li>
-			<li>xxxxxx</li>
+			<li>Football/futsall.</li>
+			<li>Badminton.</li>
+			<li>Travelling. (Strange right?)</li>
 		</ul>
 
 		<!-- Likes -->
 		<h2>Likes</h2>
-		<p>Yogi likes asjajsjaj.</p>
 		<ol>
-			<li><a href="https://youtu.be/kYU-rE1eM-w" target="_blank">Gnossienne No.1</a></li>
-			<li><a href="https://youtu.be/Yl7fK23F5QU" target="_blank">Gymnopedie No.1</a></li>
-			<li><a href="https://youtu.be/yxY5NCPxs8A" target="_blank">Gnossienne No.3</a></li>		
+			<li>xxxxxx</li>
+			<li>xxxxxx</li>
+			<li>xxxxxx</li>		
 		</ol></a>
-		<!-- Friends -->
-		<h2>Friends</h2>
-		<p>Yogi friends.</p>
-
 	</main>
 
 	<!-- Footer section -->
 	<footer>
-		<p>Demo site for the Web Development exercise for the <a href="https://courses.warwick.ac.uk/modules/2021/WM9A4-15" target="_blank">Digital Development with Python</a> IMA.</p>
-		<p>Template by Jordan_Bruno<p>
+		<p>Demo site for the Web Development IMA for the <a href="https://courses.warwick.ac.uk/modules/2021/WM9A4-15" target="_blank">Digital Development with Python</a> module.</p>
+		<p>Big thanks to Jordan for the main template</p>
 	</footer>
 </body>
 </html>
