--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<!-- Header section -->
 	<header>
-		<img src="header_photo.jpg"<br>
+		<img src="Images/header_photo.jpg"<br>
 			<h1>Yogi Rianto</h1>
 	</header>
 
@@ -21,7 +21,7 @@
 	<main>
 		<h2>About Yogi Rianto</h2>
 		<p>Yogi is a postgraduate student in WMG.</p>
-		<img src="3.png">
+		<img src="Images/3.png">
 		<p class="caption">Yogi & friend is in the Digital Entrepreneurship & Financing Module.</p>
 
 		<!-- Hobbies -->
