--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<!-- Header section -->
 	<header>
-		<img src="Images/header_photo.jpg"<br>
+		<img src="Images/header_photo.jpg"
 			<h1>Yogi Rianto</h1>
 	</header>
 
