--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="static/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 <body>
 
 	<!-- Header section -->
 	<header>
-		<img src="static/header_photo.jpg">
+		<img src="css/header_photo.jpg">
         <h1>Yogi Rianto</h1>
 	</header>
 
@@ -27,7 +27,7 @@
 					<p><p>Yogi is an <a href="https://warwick.ac.uk/fac/sci/wmg/education/wmgmasters/courses/masters_e-business_management">e-Business Management (e-BM) </a> student in <a href="https://warwick.ac.uk/fac/sci/wmg">WMG-Warwick University</a>.</p> 
 					<p> In addition, Yogi is also a banker at one of the largest banks in Indonesia, namely <a href="https://www.bni.co.id/en-us/"> Bank Negara Indonesia (BNI)</a>. Yogi has worked at BNI for ten years, with his last position being Manager in the Strategic Planning Division.</p>.</p>					
 				</div>
-				<img src="static/3.png"/> 
+				<img src="css/3.png"/> 
 			</section>
 										
 			<!-- hobbies -->
@@ -36,7 +36,7 @@
 					<h2>Hobbies</h2>
 					<p>Yogi likes to play badminton as a hobby and plays badminton with PPI Warwick.</p>					
 				</div>
-				<img src="static/DSC00100.JPG"/>
+				<img src="css/DSC00100.JPG"/>
 			</section>
 	
 			<!-- likes -->
@@ -46,7 +46,7 @@
 					<p>Yogi enjoys travelling, especially those that include adventure and outdoors, such as mountain climbing, jeep driving, and other outdoor activities. </p>
 					<p>In addition, Yogi is very interested in the latest technological developments such as blockchain and cryptocurrency</p>				
 				</div>
-				<img src="static/DSC00390.jpg"/>
+				<img src="css/DSC00390.jpg"/>
 			</section>
 	
 			<!-- tutors -->
